<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img1Activity1"
        android:layout_width="393dp"
        android:layout_height="165dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image"
        android:src="@drawable/dice_6"
        app:layout_constraintBottom_toTopOf="@id/img2Activity1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img2Activity1"
        android:layout_width="388dp"
        android:layout_height="198dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/image"
        android:src="@drawable/bankaccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/activity2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnActivity3"
        app:layout_constraintTop_toBottomOf="@id/img2Activity1"
        app:layout_constraintVertical_bias="0.769" />

    <Button
        android:id="@+id/btnActivity3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/activity3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnActivity2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2Activity1"
        app:layout_constraintVertical_bias="0.903" />

    <TextView
        android:id="@+id/editTextOutPut"
        android:layout_width="397dp"
        android:layout_height="91dp"
        android:layout_marginBottom="44dp"
        android:ems="10"

        android:gravity="center_horizontal"
        android:hint="@string/detail_display"
        app:layout_constraintBottom_toTopOf="@+id/img1Activity1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_of_the_app"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextOutPut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />


</androidx.constraintlayout.widget.ConstraintLayout>